# deeplook

./: .env.example  .gitignore  ARCHITECTURE.html  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  decisions_log.md  glama.json  nvidia_report.md  pyproject.toml
deeplook/: QUICKSTART.md  __main__.py  api.py  debug_log.py  formatter.py  instruction_generator.py  mcp_server.py  rate_limiter.py  research.py  verdict_generator.py
deeplook/data/: defunct.json  disambiguation.json
deeplook/eval/: batch_runner.py  clear_bad_cache.py  eval.py  optimize.py  patterns.json  test_companies.json
deeplook/fetchers/: cache.py  coingecko.py  defillama.py  finnhub_fetcher.py  news.py  rootdata.py  search_strategy.py  sec_edgar.py  utils.py  website.py  wikipedia.py  yfinance_data.py  youtube.py
deeplook/judgment/: synthesize.py
deeplook/output/: .gitkeep
